# FakeCoding

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  NOTICE  README.md  SECURITY.md  agent_nonsense_server.py  docker-compose.yml  pyproject.toml
.github/workflows/: docker-image.yml
agent_nonsense/: __init__.py  __main__.py  longform.py  presets.json  server.py
agent_nonsense/web/: index.html  manifest.webmanifest  sw.js
agent_nonsense/web/assets/: index-BGOmngaE.css  index-Ci0edkHQ.js
docs/: API.md  DOCKER.md  README.en.md  README.ja.md  RELEASING.md
scripts/: dev-web.ps1
web/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
web/e2e/: workspace.spec.ts
web/src/: App.tsx  styles.css  types.ts
web/src/components/: Composer.test.tsx  Composer.tsx  Conversation.tsx  EmptyState.tsx  Icon.tsx  MarkdownView.test.tsx  MarkdownView.tsx  ReviewPanel.tsx  SearchDialog.tsx  SettingsDialog.tsx  Sidebar.tsx  TitleBar.tsx  WorkspaceHeader.tsx
web/src/hooks/: useAgentStream.test.tsx  useAgentStream.ts
web/src/lib/: api.test.ts  api.ts  persistence.test.ts  persistence.ts  sse.test.ts  sse.ts
web/src/store/: useWorkspaceStore.test.ts  useWorkspaceStore.ts
web/src/test/: setup.ts
